# webserver-videoplayer

./: .gitignore  CMakeLists.txt  README.md  buildAndRun.ps1  buildPlayer.sh  main.cpp
python-remote/: remote.py  requirements.txt  torrent_downloader.py
python-remote/static/css/: style.css
python-remote/static/js/: app.js
python-remote/templates/: index.html
